Archive/c4158463940dfcd70117caedfb0b82e3-7063104e283ed82d51a6fde7370c6e59/output
+ g++-4.8 -std=c++11 -O2 -Wall -pthread main.cpp
main.cpp: In lambda function:
main.cpp:16:11: error: assignment of read-only variable 'x'
         x = 4;
           ^
